tests/errors/redefined-function.ink
// @test error

fn main() : int
{
	return 3;
}

fn foo() : int
{
	return 1;	
}

fn foo() : int
{
	return 1;	
}